# EdgeOneDynamicOrigin

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml  pypi-publish.yml
src/eodo/: app.py
src/eodo/static/: index.html
