[project]
name = "eodo2"
version = "0.1.23"
description = "EdgeOneDynamicOrigin"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "PyYAML",
    "schedule",
    "psutil",
    "fastapi",
    "uvicorn"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
eodo = "eodo.app:main"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/eodo"]
